objects/Briefing_PM__c.object
<CustomObject>
    <fields>
        <fullName>Primary_PM_Email__c</fullName>
        <label>Primary PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Briefing_PMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Scheduler_Email__c</fullName>
        <label>Primary Scheduler_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Briefing_PMs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_PM_Email__c</fullName>
        <label>Secondary PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Briefing_PMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <description>Includes Site to Scheduler and Primary and Secondary PM mappings.</description>
    <label>Briefing PM</label>
    <nameField>
        <displayFormat>BPM-{0}</displayFormat>
        <label>Briefing Program Manager</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefing PMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Site_Name__c</columns>
        <columns>NAME</columns>
        <columns>Primary_PM_Email__c</columns>
        <columns>Secondary_PM__c</columns>
        <columns>Secondary_PM_Email__c</columns>
        <columns>Primary_PM__c</columns>
        <columns>Primary_Scheduler__c</columns>
        <columns>Primary_Scheduler_Email__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>